# bindgen-deps-test

./: Cargo.toml  README.md
base-component-1/: Cargo.toml
base-component-1/src/: lib.rs
base-component-2/: Cargo.toml
base-component-2/src/: bindings.rs  lib.rs
components-store/: Cargo.toml
components-store/src/: error.rs  lib.rs
runner/: Cargo.toml
runner/src/: main.rs
runner/src/base_pkg/: base_pkg_wasi_view.rs  mod.rs
runner/src/super_pkg/: base_pkg_proxy.rs  mod.rs  super_pkg_wasi_view.rs
src/: lib.rs
src/base_pkg/: mod.rs
src/super_pkg/: mod.rs
super-component/: Cargo.toml
super-component/src/: bindings.rs  lib.rs
wit/: super-pkg.wit
